@@ -2,37 +2,9 @@
   "check_exit_status": "yes",
   "customize": {
     "install_env": {
-      "PIP_INSTALL_OPTIONS": "--ignore-installed",
+      "PIP_INSTALL_OPTIONS": "",
       "PYTHON_PACKAGE_NAME": "transformers"
-    },
-    "package_extra_name": " (original)",
-    "supported_versions": [
-      "2.0.0",
-      "2.1.0",
-      "2.1.1",
-      "2.2.0",
-      "2.2.1",
-      "2.2.2",
-      "2.3.0",
-      "2.4.0",
-      "2.4.1",
-      "2.5.0",
-      "2.5.1",
-      "2.6.0",
-      "2.7.0",
-      "2.8.0",
-      "2.9.0",
-      "2.9.1",
-      "2.10.0",
-      "2.11.0",
-      "3.0.0",
-      "3.0.1",
-      "3.0.2",
-      "3.1.0",
-      "3.2.0",
-      "3.3.0",
-      "3.3.1"
-    ]
+    }
   },
   "deps": {
     "python": {
@@ -51,11 +23,71 @@
   ],
   "process_script": "install",
   "soft_uoa": "f965f8f74eae87ce",
+  "soft_uoa#": "lib.python.transformers",
   "suggested_path": "lib-python-transformers",
   "tags": [
     "lib",
     "python-package",
     "transformers",
-    "original"
-  ]
+    "vmaster"
+  ],
+  "use_scripts_from_another_entry": {
+    "data_uoa": "e8363e22e84dedba",
+    "data_uoa#": "install-python-package",
+    "module_uoa": "script"
+  },
+  "variations": {
+    "latest": {
+      "extra_customize": {
+      },
+      "extra_env": {
+      },
+      "on_by_default": "yes"
+    },
+    "4.9.1": {
+      "extra_customize": {
+        "version": "4.9.1"
+      },
+      "extra_env": {
+        "PACKAGE_VERSION":"4.9.1"
+      },
+      "on_by_default": "no"
+    },
+    "3.3.1": {
+      "extra_customize": {
+        "version": "3.3.1"
+      },
+      "extra_env": {
+        "PACKAGE_VERSION":"3.3.1"
+      },
+      "on_by_default": "no"
+    },
+    "3.0.2": {
+      "extra_customize": {
+        "version": "3.0.2"
+      },
+      "extra_env": {
+        "PACKAGE_VERSION":"3.0.2"
+      },
+      "on_by_default": "no"
+    },
+    "2.9.1": {
+      "extra_customize": {
+        "version": "2.9.1"
+      },
+      "extra_env": {
+        "PACKAGE_VERSION":"2.9.1"
+      },
+      "on_by_default": "no"
+    },
+    "2.4.1": {
+      "extra_customize": {
+        "version": "2.4.1"
+      },
+      "extra_env": {
+        "PACKAGE_VERSION":"2.4.1"
+      },
+      "on_by_default": "no"
+    }
+  }
 }
