@@ -3,20 +3,19 @@
   "customize": {
     "check_that_exists": "yes",
     "detect_version_externally": "yes",
-    "env_prefix": "CK_ENV_PYTHON_PACKAGE_TRANSFORMERS",
+    "env_prefix": "CK_ENV_PYTHON_PACKAGE_TORCHVISION",
     "limit_recursion_dir_search": {
       "linux": 5,
       "win": 5
     },
-    "soft_file_universal": "transformers$#sep#$__init__.py",
-    "version_module_name": "__init__",
+    "soft_file_universal": "torchvision$#sep#$__init__.py",
     "version_variable_name": "__version__"
   },
-  "soft_name": "Python Transformers library",
+  "soft_name": "Python TorchVision library",
   "tags": [
     "lib",
     "python-package",
-    "transformers"
+    "torchvision"
   ],
   "use_customize_script_from_another_entry": {
     "data_uoa": "4460bdb0ade2a3df",
