@@ -1,6 +1,8 @@
 20210806:
   * added variations for PyTorch&TorchVision CUDA
   * added TF python packages (CPU & GPU)
+  * added latest versions of transformers (Python lib)
+  * added the latest version of TFLite
 
 20210805:
   * added older variations in torchvision package to support older PyTorch versions for MLPerf inference benchmark
